--- a/SecretSanta.ApiService/Properties/launchSettings.json
+++ b/SecretSanta.ApiService/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api",
       "applicationUrl": "http://localhost:5551",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -15,7 +15,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api",
       "applicationUrl": "https://localhost:7532;http://localhost:5551",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
