feature complete missing form validation

--- a/SecretSanta.AppHost/SecretSanta.AppHost.csproj
+++ b/SecretSanta.AppHost/SecretSanta.AppHost.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0-rc.1.24511.1" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.0.0-rc.1.24511.1" />
     <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Blazor.Bootstrap" Version="3.1.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SecretSanta.ApiService\SecretSanta.ApiService.csproj" />
