Update package references to latest versions across multiple projects

--- a/SecretSanta.AppHost/SecretSanta.AppHost.csproj
+++ b/SecretSanta.AppHost/SecretSanta.AppHost.csproj
@@ -9,10 +9,10 @@
     <UserSecretsId>44b4fe13-2f74-40f6-a2d3-a4d7b07e8873</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Blazor.Bootstrap" Version="3.1.1" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.2" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.5.2" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.5.2" />
+    <PackageReference Include="Blazor.Bootstrap" Version="3.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SecretSanta.ApiService\SecretSanta.ApiService.csproj" />
